[package]
name = "beany"
version = "0.1.3"
edition = "2024"
authors = ["Dawid Ratajczak"]
description = "Lighweight DI container for Rust in spring style"
license = "MIT"
repository = "https://github.com/actixboot/beany"

[dependencies]
parking_lot = "0.12.5"
beany_codegen = { version = "0.1.2", path = "beany_codegen" }