[package]
name = "beany_codegen"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Ratajczak"]
description = "Lighweight DI container for Rust in spring style"
license = "MIT"
repository = "https://github.com/actixboot/beany"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
